# irodori-sql

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: ast.rs  dialect.rs  grammar.rs  lib.rs  migration.rs  params.rs  parser.rs
tests/: migration_real_db.rs  migration_snapshots.rs  tracing.rs
tests/snapshots/: migration_snapshots__mysql_keyed_diff.snap  migration_snapshots__postgres_row_hash_select.snap  migration_snapshots__snowflake_manifest_tables.snap
