[package]
name = "irodori-sql"
version = "0.2.24"
edition = "2021"
license = "MIT OR 0BSD"
authors = ["Irodori Table contributors"]
description = "SQL dialect, parameter, metamodel, and schema helpers for Irodori."
repository = "https://github.com/hjosugi/irodori-sql"
readme = "README.md"
keywords = ["sql", "database", "dialect", "schema"]
categories = ["database"]

[lib]
path = "src/lib.rs"
