[package]
name = "irodori-sql"
version = "0.3.0"
edition = "2021"
license = "MIT OR 0BSD"
authors = ["Irodori Table contributors"]
description = "SQL dialect, parameter, metamodel, and schema helpers for Irodori."
repository = "https://github.com/hjosugi/irodori-sql"
readme = "README.md"
keywords = ["sql", "database", "dialect", "schema"]
categories = ["database"]

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
insta = "1.48.0"
postgres = "0.19.14"
testcontainers = { version = "0.27.3", features = ["blocking"] }
testcontainers-modules = { version = "0.15.0", features = ["blocking", "postgres"] }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
